--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "mathUtils",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "@s/mathUtils",
+  "version": "0.0.2",
+  "description": "math libary for render",
+  "main": "lib/index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+     "doc": "typedoc --options ./typedoc.json",
+     "build": "rm -rf lib && rm -rf types && tsc"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +16,7 @@
     "@types/jest": "^28.1.3",
     "jest": "^28.1.1",
     "ts-jest": "^28.0.5",
+    "typedoc": "^0.23.2",
     "typescript": "^4.7.4"
   }
 }
